fix: horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -91,7 +91,11 @@ html {
   padding: 0;
   margin: 0 auto;
 }
-
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 .header {
   height: 566px;
   background-image: url(./assets/header_background.png);
